* 0.4.7

  * New 'Defaults' button in the wizard to restore default settings
  * Improve airport search

* 0.4.6

  * New wizard page with most common options directly available
  * A modal window prevent multiple launch of fgfs
  * Read new fgfs airport format
  * Refresh airport list only on demand
  * Aircraft viewer preserve image aspect ratio and auto scale the view to the aircraft dimensions
  * Several fixes

* 0.4.5

  * Fixed win32 GL context bug.
  * Scanning for installed airports recognises new directory structure.

* 0.4.4

  * Fixed FlightGear --fullscreen typo.
  * Restore window size and position at start up.
  * Added enable-ai-models option.
  * Support new Scenery/Terrain directory structure.
  * Removed METAR button.

* 0.4.3

  * Maintain proper aspect ratio of aircraft preview window.
  * Added control to refresh airport and runway data.
  * Display aircraft description.
  * Smarter handling of aircraft aliases.
  * Fullscreen option at startup.

* 0.4.2

  * Support multiple scenery directories,
  * Fixed handling of generic I/O file option.
  * Support for new --random-wind and --proxy options.
  * Fixed properties output bug.
  * Display selected aircraft at startup.

* 0.4.1

  * Scan for installed airports in the background.
  * Cache installed airport codes.
  * Added a cloud page to the advanced disalog.
  * Saved airport is selected on startup.

* 0.4.0

  * New wizard style interface to make it easier for first time and infrequent
    users to get started.  The original interface is now the advanced options 
    interface.
  * Aircraft preview (requires plib, simgear and opengl).
  * New airport browser with incremental search facility.
  * runways.dat is loaded in the background.
  * New weather page in advanced dialog.

* 0.3.3

  * Not released.

* 0.3.2

  * Windows updates.

* 0.3.1

  * Use absolute pathnames on Windows.
