@@ -8,8 +8,7 @@ declblock {\#ifdef HAVE_CONFIG_H} {open after {\#endif}
   decl {\#include <config.h>} {}
 } 
 
-decl {\#include "wizard.h"} {selected
-} 
+decl {\#include "wizard.h"} {} 
 
 decl {\#include <string>} {public
 } 
@@ -42,7 +41,7 @@ class Wizard {open
       label {FlightGear Wizard} open
       private xywh {619 204 640 480} type Double visible
     } {
-      Fl_Wizard wiz {
+      Fl_Wizard wiz {open
         private xywh {0 0 645 440}
         code0 {win->resizable( wiz );}
       } {
@@ -152,17 +151,32 @@ class Wizard {open
           }
         }
         Fl_Group {page[2]} {
-          label {Select a location}
-          private xywh {0 0 640 440} labelfont 1 align 21 hide
+          label {Select a location} open
+          private xywh {0 0 640 440} labelfont 1 align 21
         } {
-          Fl_Box airports_ {
-            private xywh {5 25 630 410} resizable
+          Fl_Box airports_ {selected
+            private xywh {5 25 630 380} resizable
             code0 {\#include "AirportBrowser.h"}
             class AirportBrowser
           }
+          Fl_Group {} {open
+            xywh {5 410 630 25}
+          } {
+            Fl_Input carrier_ {
+              label {Carrier : }
+              xywh {100 410 100 25}
+            }
+            Fl_Input parkpos_ {
+              label {Park pos :}
+              xywh {300 410 100 25}
+            }
+            Fl_Box {} {
+              xywh {400 410 235 25} resizable
+            }
+          }
         }
-        Fl_Group {page[3]} {open
-          private xywh {0 0 645 440}
+        Fl_Group {page[3]} {
+          private xywh {0 0 645 440} hide
         } {
           Fl_Group {} {open
             private xywh {0 405 640 25}
@@ -360,7 +374,7 @@ class Wizard {open
           xywh {0 0 640 440} hide deactivate
         } {}
       }
-      Fl_Group {} {
+      Fl_Group {} {open
         xywh {0 450 640 25}
       } {
         Fl_Button next {
